--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "issuesolver",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
@@ -12,7 +12,6 @@
     "simple-line-icons": "^2.4.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "stylelint": "^10.0.1",
     "stylelint-a11y": "^1.2.0",
@@ -24,6 +23,12 @@
     "stylelint-order": "^3.0.0",
     "stylelint-scss": "^3.6.0",
     "stylelint-webpack-plugin": "^0.10.5"
+  },
+  "devDependencies": {
+    "conventional-changelog-cli": "^2.0.11",
+    "hash-sum": "^2.0.0",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
